fix sizing for mobile, cmd-refreshed to update stuck style

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 .info .border {
 	box-shadow: inset 0 0 0 0.25rem #000;
-  font-size: 2rem;
+  font-size: 1.5rem;
   height: 100%;
   max-width: 100vh;
   margin: auto;
@@ -25,6 +25,10 @@ body {
 .info .content {
   margin: 0;
   padding: 1rem;
+}
+.info h1 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
 .metronome {
   position: fixed;
